test/files/neg/deadline-inf-illegal.check
deadline-inf-illegal.scala:5: error: value fromNow is not a member of concurrent.duration.Duration
  d.fromNow
    ^
deadline-inf-illegal.scala:6: error: type mismatch;
 found   : concurrent.duration.Duration
 required: concurrent.duration.FiniteDuration
  Deadline.now + d
                 ^
deadline-inf-illegal.scala:7: error: overloaded method value - with alternatives:
  (other: concurrent.duration.Deadline)concurrent.duration.FiniteDuration <and>
  (other: concurrent.duration.FiniteDuration)concurrent.duration.Deadline
 cannot be applied to (concurrent.duration.Duration)
  Deadline.now - d
               ^
three errors found
